--- a/source/Forms/AutoStyleableBaseDialog.resx
+++ b/source/Forms/AutoStyleableBaseDialog.resx
@@ -123,4 +123,7 @@
   <metadata name="commandAreaPanel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="footNoteAreaPanel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
