--- a/source/Panels/SchemaSelectionPanel.resx
+++ b/source/Panels/SchemaSelectionPanel.resx
@@ -125,51 +125,51 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACk
-        CwAAAk1TRnQBSQFMAwEBAAHAAQABwAEAARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
+        CwAAAk1TRnQBSQFMAwEBAAHoAQAB6AEAARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
         ARgDAAEBAQABIAYAASQ2AAMBBAIEAwEEAwUBBwMFAQcDBAEFAwMBBAMDAQQDAQEC/wBRAAMBAQIDBgEI
         AwoEDgETAxEBFwMUARsDFgEfAxYBHgMUARsDEQEXAw4BEwMLAQ8DBwEJAwIBA/8ARQADBAEFAxUBHQMo
         ATwBPwJAAW4BTQJOAZYBUwJVAbABXAJeAc4BWgJeAdgBVQJXAboBUgJTAagBRQJGAX8DOQFfAyUBNwMd
-        ASkDDwEUAwYBCAMBAQL/ADkAAwUBBwE1AjYBWAFdAmEB4gEhAaQBxQH/AVABtgHOAf8BjgHJAdwB/wGX
-        AdAB4gH/AYcBywHgAf8BXAHHAd0B/wFLAcIB2wH/ATYBuQHXAf8BGwGkAcUB/wEFAYwBsQH/ASkBaQF4
-        AfoDUQGiAygBPQMUARsDBgEI/wA5AANBAXIBHQGuAdAB/wGHAdYB6wH/AdgB+AL/AfUD/wHvAf0C/wHe
-        AfkC/wHIAfQC/wGuAfAB/gH/AZUB6gH9Af8BZQHmAf0B/wFSAeQB/QH/AU4B4wL/AWcB2gHyAf8BQAGp
-        AccB/wFbAl4B0AIrASwBQwMJAQz/ADkAAUEBfwGHAfkBgAHeAfcB/wGyAfIC/wHSAfUC/wHsAfsC/wHp
-        AfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7Af8BYgHjAfsB/wFOAd8B+gH/AUcB3QH6
-        Af8BmAHsAv8BvQHwAf4B/wEmAbEB2wH/A0cBgwMGAQj/ADkAAUEBgQGIAfkBkAHqAv8BrAHuAv8B0gH1
-        Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGSAegB+wH/AWIB4wH7Af8BTgHf
-        AfoB/wFHAd0B+gH/AZIB6AH8Af8BxAH3Av8BOAHBAewB/wNHAYMDBgEI/wA5AAFRAX0BgwH3AY0B6AL/
-        AawB7gL/AdIB9QL/AewB+wL/AekB+gH+Af8B3QH5Av8ByAH0Av8BrgHwAf4B/wGVAeoB/QH/AWMB5AH8
-        Af8BTgHfAfoB/wFHAd0B+gH/AZIB6AH8Af8BwgH1Av8BNgHBAesB/wNHAYIDBgEI/wA5AAFRAX0BgwH3
-        AY0B6AL/Aa4B7wL/Ad0B+wb/AfwD/wHXAfUB/AH/AbcB6gH3Af8BoQHnAfcB/wGJAeIB9gH/AWcB6AL/
-        AVgB6QL/AU4B5QL/AZYB7AL/AcIB9QL/ATYBwQHsAf8DRgGBAwUBB/8AOQABTQF6AYcB+gGVAe4C/wGl
-        AeoB/AH/AYMBzQHhAf8BQgGzAc4B/wEqAaYBwwH/AS8BqAHEAf8BMgGpAcYB/wEpAaYBxAH/ARsBnwG+
-        Af8BCAGRAbQB/wEFAZEBtQH/ARIBowHGAf8BYgHRAegB/wHOAf4C/wE7AcQB7gH/A0UBfwMCAQP/ADkA
-        AVoCXgHYAS8BugHaAf8BLAGzAdEB/wFgAccB3gH/AaoB2wHpAf8BsgHeAeoB/wGsAd4B7AH/AaAB3QHt
-        Af8BjAHZAesB/wFeAdIB6QH/AUQBxwHjAf8BMwHDAeAB/wEiAbMB0wH/ARwBnQG+Af8BIgGXAbYB/wEr
-        AX8BmwH+Az8BbQMDAQT/ADkAAVgCWwHLATUBvgHdAf8BmQHjAfYB/wHLAfIB/AH/AfAB/QL/AfID/wHh
-        AfsC/wHJAfUC/wGwAfEC/wGWAesB/gH/AWYB5wH+Af8BUQHjAf0B/wFGAdwB+QH/AYcB4AH1Af8BYgHB
-        AdkB/wFBAXEBhAH5Az0BaQMHAQn/ADkAAUwBaAFsAfMBiAHkAf0B/wGuAe8C/wHTAfYC/wHsAfsC/wHp
-        AfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7Af8BYgHjAfsB/wFOAd8B+gH/AUcB3QH6
-        Af8BlQHqAf0B/wHAAfMC/wEvAbsB5gH/A0YBgAMGAQj/ADkAAVEBfwGEAfcBjQHoAv8BrAHuAv8B0gH1
-        Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGSAegB+wH/AWIB4wH7Af8BTgHf
-        AfoB/wFHAd0B+gH/AZIB6AH8Af8BwgH1Av8BNQHDAe4B/wNHAYIDBgEI/wA5AAFRAX8BhAH3AYwB6AL/
-        AawB7gL/AdQB9gL/AfEB/QL/AfAB/QL/AeEB+gL/AcoB9QL/AbAB8QH+Af8BlgHrAf0B/wFmAeYB/gH/
-        AVEB4gH8Af8BSAHeAfsB/wGSAegB/AH/AcIB9QL/ATYBxAHuAf8DRwGCAwYBCP8AOQABUQF/AYQB9wGO
-        AekC/wGyAfEC/wHPAfQB/gH/AdEB7gH2Af8BwAHnAfEB/wGvAeIB7wH/AZ0B3QHuAf8BiQHZAewB/wFd
-        AdMB6gH/AUcBzgHqAf8BOQHNAeoB/wE/AdYB9AH/AZcB7AL/AckB+QL/ATYBxAHvAf8DRwGCAwYBCP8A
-        OQABUQGAAYUB9wGEAeQB/AH/AYMB2QHwAf8BkAHYAesB/wGEAdAB5AH/AV8BygHhAf8BVgHFAd0B/wFS
-        AcIB3AH/AVABwAHaAf8BSwG9AdgB/wE+AbkB1wH/ATUBtgHWAf8BLQG5AdoB/wFOAcYB4AH/AZ8B3wHw
-        Af8BOAHGAfAB/wNHAYIDBgEI/wA5AAFRAX8BhAH3AU4BzwHrAf8BYQHQAegB/wGIAdYB7QH/AakB5gH4
-        Af8BvwHxAv8BwwHzAv8BwgHzAv8BuwHwAv8BswHuAv8BqgHrAv8BlQHiAf0B/wFWAcsB6wH/AUQBugHa
-        Af8BSgG7AdsB/wEZAa4B2QH/A0cBggMGAQj/ADkAAUQBhAGJAfkBmQHfAfIB/wHCAfEC/wHAAfEC/wG7
+        ASkDDwEUAwYBCAMBAQL/ADkAAwUBBwE1AjYBWAFdAmEB4gEcAaQBxQH/AUsBtgHOAf8BjgHJAdwB/wGX
+        AdAB4gH/AYcBywHgAf8BVwHHAd0B/wFGAcIB2wH/ATEBuQHXAf8BFgGkAcUB/wEAAYwBsQH/ASkBYgFz
+        AfoDUQGiAygBPQMUARsDBgEI/wA5AANBAXIBGAGuAdAB/wGHAdYB6wH/AdgB+AL/AfUD/wHvAf0C/wHe
+        AfkC/wHIAfQC/wGuAfAB/gH/AZUB6gH9Af8BYAHmAf0B/wFNAeQB/QH/AUkB4wL/AWIB2gHyAf8BOwGp
+        AccB/wFbAl4B0AIrASwBQwMJAQz/ADkAAUEBcQGCAfkBgAHeAfcB/wGyAfIC/wHSAfUC/wHsAfsC/wHp
+        AfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7Af8BXQHjAfsB/wFJAd8B+gH/AUIB3QH6
+        Af8BmAHsAv8BvQHwAf4B/wEhAbEB2wH/A0cBgwMGAQj/ADkAAUEBdwGDAfkBkAHqAv8BrAHuAv8B0gH1
+        Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGSAegB+wH/AV0B4wH7Af8BSQHf
+        AfoB/wFCAd0B+gH/AZIB6AH8Af8BxAH3Av8BMwHBAewB/wNHAYMDBgEI/wA5AAFRAW4BfQH3AY0B6AL/
+        AawB7gL/AdIB9QL/AewB+wL/AekB+gH+Af8B3QH5Av8ByAH0Av8BrgHwAf4B/wGVAeoB/QH/AV4B5AH8
+        Af8BSQHfAfoB/wFCAd0B+gH/AZIB6AH8Af8BwgH1Av8BMQHBAesB/wNHAYIDBgEI/wA5AAFRAW4BfQH3
+        AY0B6AL/Aa4B7wL/Ad0B+wb/AfwD/wHXAfUB/AH/AbcB6gH3Af8BoQHnAfcB/wGJAeIB9gH/AWIB6AL/
+        AVMB6QL/AUkB5QL/AZYB7AL/AcIB9QL/ATEBwQHsAf8DRgGBAwUBB/8AOQABTQF1AXwB+gGVAe4C/wGl
+        AeoB/AH/AYMBzQHhAf8BPQGzAc4B/wElAaYBwwH/ASoBqAHEAf8BLQGpAcYB/wEkAaYBxAH/ARYBnwG+
+        Af8BAwGRAbQB/wEAAZEBtQH/AQ0BowHGAf8BXQHRAegB/wHOAf4C/wE2AcQB7gH/A0UBfwMCAQP/ADkA
+        AVoCXgHYASoBugHaAf8BJwGzAdEB/wFbAccB3gH/AaoB2wHpAf8BsgHeAeoB/wGsAd4B7AH/AaAB3QHt
+        Af8BjAHZAesB/wFZAdIB6QH/AT8BxwHjAf8BLgHDAeAB/wEdAbMB0wH/ARcBnQG+Af8BHQGXAbYB/wEr
+        AX8BkQH+Az8BbQMDAQT/ADkAAVgCWwHLATABvgHdAf8BmQHjAfYB/wHLAfIB/AH/AfAB/QL/AfID/wHh
+        AfsC/wHJAfUC/wGwAfEC/wGWAesB/gH/AWEB5wH+Af8BTAHjAf0B/wFBAdwB+QH/AYcB4AH1Af8BXQHB
+        AdkB/wFBAWoBfwH5Az0BaQMHAQn/ADkAAUwBXwFkAfMBiAHkAf0B/wGuAe8C/wHTAfYC/wHsAfsC/wHp
+        AfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7Af8BXQHjAfsB/wFJAd8B+gH/AUIB3QH6
+        Af8BlQHqAf0B/wHAAfMC/wEqAbsB5gH/A0YBgAMGAQj/ADkAAVEBcQF/AfcBjQHoAv8BrAHuAv8B0gH1
+        Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGSAegB+wH/AV0B4wH7Af8BSQHf
+        AfoB/wFCAd0B+gH/AZIB6AH8Af8BwgH1Av8BMAHDAe4B/wNHAYIDBgEI/wA5AAFRAXEBfwH3AYwB6AL/
+        AawB7gL/AdQB9gL/AfEB/QL/AfAB/QL/AeEB+gL/AcoB9QL/AbAB8QH+Af8BlgHrAf0B/wFhAeYB/gH/
+        AUwB4gH8Af8BQwHeAfsB/wGSAegB/AH/AcIB9QL/ATEBxAHuAf8DRwGCAwYBCP8AOQABUQFxAX8B9wGO
+        AekC/wGyAfEC/wHPAfQB/gH/AdEB7gH2Af8BwAHnAfEB/wGvAeIB7wH/AZ0B3QHuAf8BiQHZAewB/wFY
+        AdMB6gH/AUIBzgHqAf8BNAHNAeoB/wE6AdYB9AH/AZcB7AL/AckB+QL/ATEBxAHvAf8DRwGCAwYBCP8A
+        OQABUQF0AYAB9wGEAeQB/AH/AYMB2QHwAf8BkAHYAesB/wGEAdAB5AH/AVoBygHhAf8BUQHFAd0B/wFN
+        AcIB3AH/AUsBwAHaAf8BRgG9AdgB/wE5AbkB1wH/ATABtgHWAf8BKAG5AdoB/wFJAcYB4AH/AZ8B3wHw
+        Af8BMwHGAfAB/wNHAYIDBgEI/wA5AAFRAXEBfwH3AUkBzwHrAf8BXAHQAegB/wGIAdYB7QH/AakB5gH4
+        Af8BvwHxAv8BwwHzAv8BwgHzAv8BuwHwAv8BswHuAv8BqgHrAv8BlQHiAf0B/wFRAcsB6wH/AT8BugHa
+        Af8BRQG7AdsB/wEUAa4B2QH/A0cBggMGAQj/ADkAAUQBfwGEAfkBmQHfAfIB/wHCAfEC/wHAAfEC/wG7
         Ae4B/gH/AbkB7QH9Af8BtwHtAf0B/wGwAesB/QH/AagB6AH9Af8BngHkAf0B/wGRAeEB/QH/AY0B4AH+
-        Af8BlgHkAv8BqQHsAv8BpQHkAfgB/wE3AbkB3QH/A0YBgAMCAQP/ADkAAS8BvwHfAf8BxgHyAv8BugHu
+        Af8BlgHkAv8BqQHsAv8BpQHkAfgB/wEyAbkB3QH/A0YBgAMCAQP/ADkAASoBvwHfAf8BxgHyAv8BugHu
         Af0B/wG4Ae0B/QH/AbkB7QH9Af8BuAHtAf0B/wGxAesB/QH/AagB6AH9Af8BnQHkAf0B/wGUAeEB/QH/
-        AZIB4QH+Af8BnAHiAf4B/wGpAecB/gH/AbcB6wL/AdkB/AL/AYQB1gHyAf8DRAF6/wA9AAFFAkYBfwFU
+        AZIB4QH+Af8BnAHiAf4B/wGpAecB/gH/AbcB6wL/AdkB/AL/AYQB1gHyAf8DRAF6/wA9AAFFAkYBfwFP
         AcwB5gH/AbQB6wH7Af8BwQHxAv8BuwHuAf4B/wGzAewB/gH/AakB6AH9Af8BngHlAf0B/wGVAeEB/QH/
         AZQB4gH+Af8BnQHkAv8BqQHnAv8BvAHuAv8BywHyAv8BmAHSAecB/wNbAcgDGgEk/wA9AAMEAQYDMgFR
-        AVgCYgHvAU0ByAHjAf8BiAHXAe4B/wGRAd0B9AH/AZQB3wH4Af8BlQHiAf4B/wGUAeIC/wGSAeAB/QH/
-        AYcB1wHzAf8BhAHSAewB/wFTAcAB3AH/ASsBrgHRAf8DUAGaAxEBF/8ASQADDQESAxYBHgE8Aj0BZwFU
+        AVgCYgHvAUgByAHjAf8BiAHXAe4B/wGRAd0B9AH/AZQB3wH4Af8BlQHiAf4B/wGUAeIC/wGSAeAB/QH/
+        AYcB1wHzAf8BhAHSAewB/wFOAcAB3AH/ASYBrgHRAf8DUAGaAxEBF/8ASQADDQESAxYBHgE8Aj0BZwFU
         AlYBqwFZAlwBzANfAeABWAJfAeMBWwJgAdYBVgJXAbgDSgGMAyQBNQMQARUDBgEI/wD/ALYAAUIBTQE+
         BwABPgMAASgDAAFgAwABGAMAAQEBAAEBBQABIAEBFgAD/wEAAf8BgAE/CQAB/AEAAQ8JAAH4AQABAwkA
         AfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEA
@@ -177,4 +177,7 @@
         AfABAAEDCQAB8AEAAQcJAAHwAQABBwkAAfABAAEPCQAB/AEAAR8JAAP/CQAL
 </value>
   </data>
+  <metadata name="labelsToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>139, 19</value>
+  </metadata>
 </root>
